# fifa17-api-rust

./: .env  Cargo.toml  docker-compose.yml  init_tables.sql
docker/: docker-compose.yml
docker/postgres/: init.sql
migrations/20170130022127_create_users_games/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
